--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -1,4 +1,5 @@
-﻿<h1>Add a Job</h1>
+﻿@model TechJobsPersistent.ViewModels.AddJobViewModel
+<h1>Add a Job</h1>
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
@@ -6,7 +7,13 @@
         <input class="form-control" />
         <span></span>
     </div>
+    <div class="form-group">
+        <label>Employer</label>
+        <select class="form-control" asp-items="Model.Employers">
+        </select>
 
+        <a href="../Employer/Add">Add Employer</a>
+    </div>
     <input type="submit" value="Add Job" />
 </form>
 
