--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -4,13 +4,12 @@
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
         <label>Name</label>
-        <input class="form-control" />
-        <span></span>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
         <label>Employer</label>
-        <select class="form-control" asp-items="Model.Employers">
-        </select>
+        <select asp-for="EmployerId" class="form-control" asp-items="Model.Employers"></select>
 
         <a href="../Employer/Add">Add Employer</a>
     </div>
