--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -12,6 +12,7 @@
         <select asp-for="EmployerId" class="form-control" asp-items="Model.Employers"></select>
 
         <a href="../Employer/Add">Add Employer</a>
+        <span asp-validation-for="EmployerId"></span>
     </div>
 
 
